# orlax

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
configs/: bc_hopper_medium.toml  cql_hopper_medium.toml  iql_hopper_medium.toml
src/orlax/: __init__.py
src/orlax/algos/: __init__.py  bc.py  cql.py  iql.py
src/orlax/core/: __init__.py  buffer.py  cfg.py  logger.py  optim.py  types.py  utils.py
src/orlax/data/: __init__.py  collate.py  dataset.py  minari.py
src/orlax/models/: __init__.py  mlp.py  nets.py
src/orlax/scripts/: eval.py  export.py  run.py
src/orlax/train/: __init__.py  loop.py  pmap.py  runner.py
